--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "Promise": "^1.0.5",
+    "async": "^2.6.0",
     "axios": "^0.18.0",
     "echarts": "^4.0.4",
-    "vue": "^2.5.2"
+    "http": "0.0.0",
+    "net": "^1.0.2",
+    "process": "^0.11.10",
+    "sockjs": "^0.3.19",
+    "sockjs-client": "^1.0.0",
+    "stompjs": "^2.3.3",
+    "vue": "^2.5.2",
+    "vue-stomp": "0.0.5",
+    "webstomp-client": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
