--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": "^2.6.0",
     "axios": "^0.18.0",
     "echarts": "^4.0.4",
+    "element-ui": "^2.3.6",
     "http": "0.0.0",
     "net": "^1.0.2",
     "process": "^0.11.10",
