--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "echarts": "^4.0.4",
     "element-ui": "^2.3.6",
     "http": "0.0.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "net": "^1.0.2",
     "process": "^0.11.10",
     "sockjs": "^0.3.19",
